--- a/about.html
+++ b/about.html
@@ -409,7 +409,7 @@ div.tocify {
 
 
 <p><br></p>
-<p><img src="images/covid_protest.jpeg" style="width:100%"> <em>Liberate Michigan" protests against governor Gretchen Whitmer’s Lockdown orders.</em> <br></p>
+<p><img src="images/covid_protest.jpeg" style="width:100%"> <em>Liberate Michigan" protests against Governor Gretchen Whitmer’s lockdown orders.</em> <br></p>
 <div id="motivation" class="section level3">
 <h3><strong>Motivation</strong></h3>
 <p>Since the start of COVID-19, a range of conspiracy theories have spun up in the United States about the scope and severity of the pandemic. The <a href="https://apnews.com/article/virus-outbreak-donald-trump-ap-fact-check-anthony-fauci-flu-fe474f0c15f76adf324791a2cfc1e2bb">President</a> has repeatedly compared coronavirus to the flu, claiming that the lethality of the two diseases are comparable. While public health professionals can quickly dismiss these statements as nonsensical absurdities, they are actually not unusual at all amongst the general public. As the daily Covid Death toll reaching new heights in the United States, 30% of Americans are <a href="https://projects.fivethirtyeight.com/coronavirus-polls/">not concerned</a> with the virus.</p>
@@ -418,8 +418,8 @@ div.tocify {
 </iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/watch?v=UK1OtCuGRbk&amp;ab_channel=FRONTLINEPBS%7COfficial" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
-<p>Furthermore, as the pandemic had worn on, the general public has grown increasingly skeptical of the preventive measures that public health officials are promoting Throughout the developed world, the idea that <a href="https://www.radiologybusiness.com/topics/policy/scott-atlas-radiologist-white-house-covid-19-fauci">“lockdowns kill people”</a> has been picked up by an increasingly large portions of pundits, activists and elected officials alike. Opponents of lockdowns claim that these restrictions have significant negative impacts on other aspects of public health, and those consequences vastly outweigh the the supposed benefits that these preventive measures are intended for.</p>
-<p><br></p>
+<p>Furthermore, as the pandemic had worn on, the general public has grown increasingly skeptical of the preventive measures that public health officials are promoting throughout the developed world, the idea that <a href="https://www.radiologybusiness.com/topics/policy/scott-atlas-radiologist-white-house-covid-19-fauci">“lockdowns kill people”</a> has been picked up by an increasingly large portions of pundits, activists and elected officials alike. Opponents of lockdowns claim that these restrictions have significant negative impacts on other aspects of public health, and those consequences vastly outweigh the the supposed benefits that these preventive measures are intended for.<br />
+<br></p>
 </div>
 <div id="exploratory-analyses" class="section level3">
 <h3><strong>Exploratory Analyses</strong></h3>
@@ -427,7 +427,7 @@ div.tocify {
 <ul>
 <li>What are the excess deaths data of 2020 look like? Is excess deaths data of 2020 significantly different from recent years?<br />
 </li>
-<li>Is COVID-19 responsible for the increase (or lackthereof) in excess deaths. If not, what are the other causes?<br />
+<li>Is COVID-19 responsible for the increase (or lack thereof) in excess deaths. If not, what are the other causes?<br />
 </li>
 <li>Are the pandemic prevention measures such as travel restrictions and lockdowns contributing associated with significant negative public health consequences?<br />
 </li>
@@ -437,14 +437,14 @@ div.tocify {
 </div>
 <div id="data" class="section level3">
 <h3><strong>Data</strong></h3>
-<p><strong><em>Excess Deaths Associated with COVID-19</em></strong> is from the <a href="https://data.cdc.gov/NCHS/Excess-Deaths-Associated-with-COVID-19/xkkf-xrst/">Centers for Disease Control and Prevention</a>. Excess Deaths Data is free public data published by Centers for Disease Control and Prevention. Estimates of excess deaths presented in this webpage were calculated using Farrington surveillance algorithms (1). For each jurisdiction, a model is used to generate a set of expected counts, and the upper bound of the 95% Confidence Intervals (95% CI) of these expected counts is used as a threshold to estimate excess deaths. Observed counts are compared to these upper bound estimates to determine whether a significant increase in deaths has occurred.</p>
+<p><strong><em>Excess Deaths Associated with COVID-19</em></strong> is from the <a href="https://data.cdc.gov/NCHS/Excess-Deaths-Associated-with-COVID-19/xkkf-xrst/">Centers for Disease Control and Prevention</a>. Excess deaths data is free public data published by Centers for Disease Control and Prevention. Estimates of excess deaths presented in this webpage were calculated using Farrington surveillance algorithms (1). For each jurisdiction, a model is used to generate a set of expected counts, and the upper bound of the 95% Confidence Intervals (95% CI) of these expected counts is used as a threshold to estimate excess deaths. Observed counts are compared to these upper bound estimates to determine whether a significant increase in deaths has occurred.</p>
 <p><strong><em>Provisional COVID-19 Death Counts by Week Ending Date and State</em></strong> was obtained from the <a href="https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Week-Ending-D/r8kw-7aab">Centers for Disease Control and Prevention</a>. Deaths involving coronavirus disease 2019 (COVID-19), pneumonia, and influenza reported to NCHS by week ending date and by state.</p>
 <p><strong><em>COVID-19 Prevention Methods by States</em></strong> was obtained from the <a href="https://www.nashp.org/governors-prioritize-health-for-all/">National Academy of State Health Policy</a>. We import and link data on the lengths of each states stay-at-home-orders, mask mandate as well as travel restrictions based on information aggregated from by the National Academy of State Health Policy.</p>
 <p><br></p>
 </div>
 <div id="screencast" class="section level3">
 <h3><strong>Screencast</strong></h3>
-<p>The screencast below clearly shows the background, moethod, result and conclusion of our project.</p>
+<p>The screencast below clearly shows the background, method, result and conclusion of our project.</p>
 </div>
 
 <!DOCTYPE html>
