--- a/analysis.html
+++ b/analysis.html
@@ -335,12 +335,12 @@ $(document).ready(function () {
 
 
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ─────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.3.2     ✓ purrr   0.3.4
 ## ✓ tibble  3.0.3     ✓ dplyr   1.0.2
 ## ✓ tidyr   1.1.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.5.0</code></pre>
-<pre><code>## ── Conflicts ───────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(lubridate)</code></pre>
@@ -381,7 +381,7 @@ library(kableExtra)</code></pre>
   clean_names() %&gt;% 
   rename(end_week=week_ending_date) %&gt;% 
   filter(type==&quot;Predicted (weighted)&quot;&amp;outcome==&quot;All causes&quot;) </code></pre>
-<p>The second dataset includes the weekly counts of COVID-19 related deaths in the for each US state. And is avalailable here: <a href="https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Week-Ending-D/r8kw-7aab" class="uri">https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Week-Ending-D/r8kw-7aab</a></p>
+<p>The second dataset includes the weekly counts of COVID-19 related deaths in each US state. And is available here: <a href="https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Week-Ending-D/r8kw-7aab" class="uri">https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Week-Ending-D/r8kw-7aab</a></p>
 <pre class="r"><code>covid_deaths &lt;- read_csv(&quot;data/Provisional_COVID-19_Death_Counts_by_Week_Ending_Date_and_State.csv&quot;) %&gt;% 
   clean_names() %&gt;%
   mutate(end_week=mdy(end_week))%&gt;%
@@ -390,7 +390,7 @@ library(kableExtra)</code></pre>
 merged_data &lt;- inner_join(covid_deaths,excess_deaths) %&gt;% 
   mutate(excess_non_covid=excess_higher_estimate-covid_19_deaths)</code></pre>
 <p>These datasets are updated frequently. This analysis is based on data downloaded on December 1, 2020. Also because death reporting takes time this analysis focuses on deaths reported through the end of October 2020.</p>
-<p>To explore the relationship between excess deaths, deaths attributed to COVID-19, and excess deaths that were not attributed to COVID-19, we generated time series plots for these quanities for the entire nation.</p>
+<p>To explore the relationship between excess deaths, deaths attributed to COVID-19, and excess deaths that were not attributed to COVID-19, we generated time series plots for these quantities for the entire nation.</p>
 <pre class="r"><code>panel1=merged_data %&gt;% 
   filter(state==&quot;United States&quot;) %&gt;% 
    ggplot(aes(x=end_week,y=covid_19_deaths))+
@@ -411,7 +411,6 @@ panel2= merged_data  %&gt;%
    labs(x = &quot;Date&quot;, y = &quot;Excess deaths&quot;) +
    geom_point(alpha=0.5, size=3)+
    geom_smooth(se=FALSE, span=0.2) +
-
     scale_x_date(
     labels = date_format(&quot;%m-%Y&quot;),
     breaks= c(as.Date(&quot;2020/2/1&quot;),as.Date(&quot;2020/5/1&quot;),as.Date(&quot;2020/8/1&quot;), as.Date(&quot;2020/11/1&quot;)),
@@ -426,7 +425,6 @@ panel3=
    labs(x = &quot;Date&quot;, y = &quot;Excess deaths not attributed to COVID-19&quot;) +
    geom_point(alpha=0.5, size=3)+
    geom_smooth(se=FALSE, span=0.2) +
-
     scale_x_date(
     labels = date_format(&quot;%m-%Y&quot;),
     breaks= c(as.Date(&quot;2020/2/1&quot;),as.Date(&quot;2020/5/1&quot;),as.Date(&quot;2020/8/1&quot;), as.Date(&quot;2020/11/1&quot;)),
@@ -442,10 +440,10 @@ panel2 + panel1 + panel3</code></pre>
     excess_deaths=sum(excess_higher_estimate),
     covid_deaths=sum(covid_19_deaths),
     excess_not_covid=sum(excess_higher_estimate)-sum(covid_19_deaths)) %&gt;% 
-   kbl(caption=&quot;Excess and Covid Deaths in the United States: Feb-October, 2002&quot;, digits = 1) %&gt;% kable_classic()</code></pre>
+   kbl(caption=&quot;Excess and Covid Deaths in the United States: Feb-October, 2020&quot;, digits = 1) %&gt;% kable_classic()</code></pre>
 <table class=" lightable-classic" style='font-family: "Arial Narrow", "Source Sans Pro", sans-serif; margin-left: auto; margin-right: auto;'>
 <caption>
-Excess and Covid Deaths in the United States: Feb-October, 2002
+Excess and Covid Deaths in the United States: Feb-October, 2020
 </caption>
 <thead>
 <tr>
