--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ $(document).ready(function () {
 
 <div id="exploring-real-impacts-of-covid-19-in-terms-of-excess-deaths-numbers." class="section level3">
 <h3>Exploring Real Impacts Of COVID-19 In Terms Of Excess Deaths Numbers.</h3>
-<p><strong>Chong Li (cl4045), Matthew Angulo (am5195), Alexander Melamed (am5195), Diana Sanchez (des2190)</strong></p>
+<p><strong>Chong Li (cl4045), Matthew Angulo (ma3997), Alexander Melamed (am5195), Diana Sanchez (des2190)</strong></p>
 <p><img src="images/covid.jpg" style="width:100%"></p>
 <div id="introduction" class="section level4">
 <h4>Introduction</h4>
