--- a/about.html
+++ b/about.html
@@ -356,7 +356,7 @@ div.tocify {
   <a href="about.html">Introduction</a>
 </li>
 <li>
-  <a href="dashboard.html">Analyses</a>
+  <a href="casulties.html">COVID Impacts</a>
 </li>
 <li>
   <a href="final_report.html">Conclusion</a>
@@ -409,7 +409,7 @@ div.tocify {
 
 
 <p><br></p>
-<p><img src="images/covid_protest.jpeg" style="width:100%"> <em>Liberate Michigan" protests against Governor Gretchen Whitmer’s lockdown orders.</em> <br></p>
+<p><img src="images/covid_protest.jpeg" style="width:100%"> <em>“Liberate Michigan” protests against Governor Gretchen Whitmer’s lockdown orders.</em> <br></p>
 <div id="motivation" class="section level3">
 <h3><strong>Motivation</strong></h3>
 <p>Since the start of COVID-19, a range of conspiracy theories have spun up in the United States about the scope and severity of the pandemic. The <a href="https://apnews.com/article/virus-outbreak-donald-trump-ap-fact-check-anthony-fauci-flu-fe474f0c15f76adf324791a2cfc1e2bb">President</a> has repeatedly compared coronavirus to the flu, claiming that the lethality of the two diseases are comparable. While public health professionals can quickly dismiss these statements as nonsensical absurdities, they are actually not unusual at all amongst the general public. As the daily Covid Death toll reaching new heights in the United States, 30% of Americans are <a href="https://projects.fivethirtyeight.com/coronavirus-polls/">not concerned</a> with the virus.</p>
