--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ $(document).ready(function () {
   <a href="about.html">Introduction</a>
 </li>
 <li>
-  <a href="dashboard.html">Analyses</a>
+  <a href="casulties.html">COVID Impacts</a>
 </li>
 <li>
   <a href="final_report.html">Conclusion</a>
@@ -340,9 +340,9 @@ $(document).ready(function () {
 <h4>Introduction</h4>
 <p>Our <a href="about.html">motivations and purposes</a> can be found here.</p>
 </div>
-<div id="covid-19-casulties" class="section level4">
-<h4>COVID-19 Casulties</h4>
-<p>Our <a href="final_report.html">Analysis</a> on COVID-19 casulties can be found here</p>
+<div id="covid-19-impacts" class="section level4">
+<h4>COVID-19 Impacts</h4>
+<p>Our <a href="casulties.html">Analysis</a> on the impacts of COVID-19 can be found here</p>
 </div>
 <div id="covid-19-preventions" class="section level4">
 <h4>COVID-19 Preventions</h4>
