--- a/dashboard.html
+++ b/dashboard.html
@@ -356,7 +356,7 @@ div.tocify {
   <a href="about.html">Introduction</a>
 </li>
 <li>
-  <a href="dashboard.html">Analyses</a>
+  <a href="casulties.html">COVID Impacts</a>
 </li>
 <li>
   <a href="final_report.html">Conclusion</a>
