--- a/final_report.html
+++ b/final_report.html
@@ -359,6 +359,9 @@ div.tocify {
   <a href="casulties.html">COVID Impacts</a>
 </li>
 <li>
+  <a href="preventions.html">Prevention Outcomes</a>
+</li>
+<li>
   <a href="final_report.html">Conclusion</a>
 </li>
 <li class="dropdown">
@@ -417,7 +420,7 @@ div.tocify {
  
 <hr />
 <p style="text-align: center;">
-Matthew Angulo (am5195), Chong Li (cl4045), Alexander Melamed (am5195), Diana Sanchez (des2190)
+Matthew Angulo (ma3997), Chong Li (cl4045), Alexander Melamed (am5195), Diana Sanchez (des2190)
 </p>
 
 <p style="text-align: center;">
