--- a/index.html
+++ b/index.html
@@ -283,6 +283,9 @@ $(document).ready(function () {
   <a href="casulties.html">COVID Impacts</a>
 </li>
 <li>
+  <a href="preventions.html">Prevention Outcomes</a>
+</li>
+<li>
   <a href="final_report.html">Conclusion</a>
 </li>
 <li class="dropdown">
@@ -336,22 +339,6 @@ $(document).ready(function () {
 <h3>Exploring Real Impacts Of COVID-19 In Terms Of Excess Deaths Numbers.</h3>
 <p><strong>Chong Li (cl4045), Matthew Angulo (ma3997), Alexander Melamed (am5195), Diana Sanchez (des2190)</strong></p>
 <p><img src="images/covid.jpg" style="width:100%"></p>
-<div id="introduction" class="section level4">
-<h4>Introduction</h4>
-<p>Our <a href="about.html">motivations and purposes</a> can be found here.</p>
-</div>
-<div id="covid-19-impacts" class="section level4">
-<h4>COVID-19 Impacts</h4>
-<p>Our <a href="casulties.html">Analysis</a> on the impacts of COVID-19 can be found here</p>
-</div>
-<div id="covid-19-preventions" class="section level4">
-<h4>COVID-19 Preventions</h4>
-<p>Our <a href="final_report.html">Analysis</a> on COVID-19 prevention outcomes can be found here</p>
-</div>
-<div id="conclusions" class="section level4">
-<h4>Conclusions</h4>
-<p>Our Conclusion.</p>
-</div>
 </div>
 
 <!DOCTYPE html>
@@ -359,7 +346,7 @@ $(document).ready(function () {
  
 <hr />
 <p style="text-align: center;">
-Matthew Angulo (am5195), Chong Li (cl4045), Alexander Melamed (am5195), Diana Sanchez (des2190)
+Matthew Angulo (ma3997), Chong Li (cl4045), Alexander Melamed (am5195), Diana Sanchez (des2190)
 </p>
 
 <p style="text-align: center;">
