--- a/dashboard.html
+++ b/dashboard.html
@@ -362,10 +362,7 @@ div.tocify {
   <a href="preventions.html">Prevention Outcomes</a>
 </li>
 <li>
-  <a href="dashboard.html">Dashboard</a>
-</li>
-<li>
-  <a href="final_report.html">Conclusion</a>
+  <a href="final_report.html">Discussion</a>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
