--- a/final_report.html
+++ b/final_report.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Final Report</title>
+<title>Discussion</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -362,10 +362,7 @@ div.tocify {
   <a href="preventions.html">Prevention Outcomes</a>
 </li>
 <li>
-  <a href="dashboard.html">Dashboard</a>
-</li>
-<li>
-  <a href="final_report.html">Conclusion</a>
+  <a href="final_report.html">Discussion</a>
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
@@ -409,7 +406,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Final Report</h1>
+<h1 class="title toc-ignore">Discussion</h1>
 
 </div>
 
