--- a/final_report.html
+++ b/final_report.html
@@ -362,6 +362,9 @@ div.tocify {
   <a href="preventions.html">Prevention Outcomes</a>
 </li>
 <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="final_report.html">Final Report</a>
 </li>
 <li class="dropdown">
