--- a/index.html
+++ b/index.html
@@ -286,6 +286,9 @@ $(document).ready(function () {
   <a href="preventions.html">Prevention Outcomes</a>
 </li>
 <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="final_report.html">Final Report</a>
 </li>
 <li class="dropdown">
