--- a/final_report.html
+++ b/final_report.html
@@ -25,19 +25,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
-<script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
-
-<style type="text/css">
-  code{white-space: pre-wrap;}
-  span.smallcaps{font-variant: small-caps;}
-  span.underline{text-decoration: underline;}
-  div.column{display: inline-block; vertical-align: top; width: 50%;}
-  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
-  ul.task-list{list-style: none;}
-    </style>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -373,9 +362,6 @@ div.tocify {
   <a href="preventions.html">Prevention Outcomes</a>
 </li>
 <li>
-  <a href="dashboard.html">Dashboard</a>
-</li>
-<li>
   <a href="final_report.html">Final Report</a>
 </li>
 <li class="dropdown">
@@ -474,6 +460,13 @@ div.tocify {
 <p><strong><em>Provisional COVID-19 Death Counts by Week Ending Date and State</em></strong> was obtained from the <a href="https://data.cdc.gov/NCHS/Provisional-COVID-19-Death-Counts-by-Week-Ending-D/r8kw-7aab">Centers for Disease Control and Prevention</a>. Deaths involving coronavirus disease 2019 (COVID-19), pneumonia, and influenza reported to NCHS by week ending date and by state. The site provided csv files for download.</p>
 <p><strong><em>COVID-19 Prevention Methods by States</em></strong> was obtained from the <a href="https://www.nashp.org/governors-prioritize-health-for-all/">National Academy of State Health Policy</a>. We import and link data on the lengths of each states stay-at-home-orders, mask mandate as well as travel restrictions based on information aggregated from by the National Academy of State Health Policy. The data was scrapped using <code>rvest</code>.</p>
 <p><strong><em>State Population Totals: 2010 - 2019</em></strong> was obtained from the <a href="https://www.census.gov/data/datasets/time-series/demo/popest/2010s-state-total.html">United States Census Bureau</a>. We import and link data on the population and demographic information for each state to further our analysis on COVID impacts as well as prevention outcomes. The site provided csv files for download.</p>
+<p><br></p>
+</div>
+<div id="exploratory-analyses" class="section level3">
+<h3>Exploratory Analyses</h3>
+<p><strong>COVID-19 Impacts</strong></p>
+<p>To accurately examine the impact of the coronavirus pandemic, our analysis follows a step-by-step progression that began with analyzing the total reported deaths from 2017 to 2020 up till October, the last month where we have complete statistics for. The total reported deaths of 2020 stands at 2,730,419, which is 15% higher than the closest year 2019’s reported deaths of 2,342,978. In terms of monthly reported deaths, the year 2020 has seen multiple months with reported deaths over 300,000 - a number that no previous records have reached. In conclusion, we can say that there is a significant increase in total deaths occurring in the year of 2020.</p>
+<p>Secondly, we investigate the nature of the increased reported deaths - whether the deaths are naturally is a product environmental factor and population growth or some shock event that drastically drives up the mortaity rate. By calculating the excess death counts (or lackthereof) from 2017 - 2020, we see that until March 2020, the observed death numbers have been consistently below the expected deaths upperbound threshold (95% CI) with afew exceptions. The past 8 months have seen a radical departure from norm for the excess deaths number, suggesting that there was one unexpected event that triggered the rise in mortatlity reporting.</p>
 </div>
 
 <!DOCTYPE html>
@@ -500,7 +493,7 @@ Data Science Fall 2020
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
+  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
